add gradle application plugin to sample subproject